# bcf-governance

./: .gitignore  LICENSE  MANIFEST.in  README.md  manifest.yml  pyproject.toml  requirements-governance.txt
.github/scripts/: run_validator_mutants.py
.github/workflows/: governance-mutants-nightly.yml  governance-mutants-weekly.yml  governance-pack.yml
bcf_governance/: __init__.py  cli.py
examples/lifecycle-walkthrough/: README.md
governance/: AGENT_TASK_CONTRACT.md  AI_DRIFT_REVIEW.md  ARCHITECTURE_BOUNDARIES.md  ARTIFACT_OWNERSHIP.md  GOVERNANCE_PLAYBOOK.md  HOTFIX_LANE.md  MODEL_RISK_AND_PROVENANCE.md  QUALITY_AND_RELEASE_GATES.md  existing-repo-adoption.yml
scripts/: __init__.py  doctor_governance_pack.py  install_governance_pack.py  scaffold_governance_artifacts.py  validate_governance_yaml.py
template-repo/: AGENTS.yml  CLAUDE.md  MEMORY.yml  Makefile.fragment  architecture-boundaries.yml  governance-profile.yml
template-repo/docs/: OPERATIONS.md
template-repo/governance/: existing-repo-adoption.yml
template-repo/phases/: hotfix-log.yml  phase-01-log.yml  phase-NN-hotfixNN.yml  phase-NN-log.yml
template-repo/plans/: build-plan.yml  phase-01-plan.yml  phase-01-workitems.yml  phase-NN-plan.yml  phase-NN-workitems.yml  phase-ledger.yml  product-spec.yml
template-repo/schemas/: agents.schema.json  architecture-boundaries.schema.json  build-plan.schema.json  (+3 more)
tests/: test_cli.py  test_install_governance_pack.py  test_pack_sync.py  test_scaffold_governance_artifacts.py  test_template_architecture_gate.py  test_validate_governance_yaml.py
(+33 files in other folders)
